--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -67,4 +67,14 @@
         android:layout_marginTop="17dp"
         android:text="Remember Username"
         android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/login_btn"
+        android:layout_marginTop="25dp"
+        android:text="TextView" />
 </RelativeLayout>
