--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,7 +26,9 @@
         android:id="@+id/user_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/user_text" />
+        android:layout_below="@+id/user_text"
+        android:backgroundTint="@android:color/black"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/pass_text"
@@ -45,7 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pass_text"
-        android:inputType="textPassword" />
+        android:backgroundTint="@android:color/black"
+        android:inputType="textPassword"
+        android:textColor="@android:color/black" />
 
     <Button
         android:id="@+id/login_btn"
@@ -65,6 +69,8 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/pass_data"
         android:layout_marginTop="17dp"
+        android:buttonTint="@android:color/black"
         android:text="Remember Username"
+        android:textColorLink="@android:color/black"
         android:textSize="16sp" />
 </RelativeLayout>
