--- a/app/src/main/res/layout/settings_item_format.xml
+++ b/app/src/main/res/layout/settings_item_format.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_gravity="center"
+    android:layout_margin="2dp"
+    android:background="?attr/selectableItemBackground"
+    app:cardCornerRadius="4dp">
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
      <TextView
+         android:id="@+id/username_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username_textview"
             android:gravity="center"
             android:text="Username"
             android:textColor="@android:color/black"
             android:textSize="20sp"
            />
     <TextView
+        android:id="@+id/username1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/username1"
-        android:layout_below="@+id/username_textview"
         android:layout_alignLeft="@+id/username_textview"
         android:layout_alignStart="@+id/username_textview"
-        android:textSize="15sp"
+        android:layout_below="@+id/username_textview"
         android:gravity="center"
+        android:textSize="15sp"
         />
     </RelativeLayout>
+</android.support.v7.widget.CardView>
