--- a/app/src/main/res/layout/settings_item_format.xml
+++ b/app/src/main/res/layout/settings_item_format.xml
@@ -6,29 +6,77 @@
     android:layout_gravity="center"
     android:layout_margin="2dp"
     android:background="?attr/selectableItemBackground"
-    app:cardCornerRadius="4dp">
+    android:padding="2dp"
+    app:cardCornerRadius="0dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-     <TextView
-         android:id="@+id/username_textview"
-            android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/username_textview"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Username"
+            android:padding="4dp"
+            android:text="username"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
-           />
-    <TextView
-        android:id="@+id/username1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/username_textview"
-        android:layout_alignStart="@+id/username_textview"
-        android:layout_below="@+id/username_textview"
-        android:gravity="center"
-        android:textSize="15sp"
-        />
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/colon1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/username_textview"
+            android:padding="4dp"
+            android:text=":"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/username1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/colon1"
+            android:fontFamily="monospace"
+            android:padding="4dp"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/password_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username_textview"
+            android:padding="4dp"
+            android:text="password"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/colon2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/username_textview"
+            android:layout_toRightOf="@+id/password_textview"
+            android:padding="4dp"
+            android:text=":"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/password1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/username_textview"
+            android:layout_toRightOf="@+id/colon2"
+            android:fontFamily="monospace"
+            android:padding="4dp"
+            android:textSize="16sp" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
