--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -55,7 +55,7 @@
         android:id="@+id/login_btn"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/checkBox"
+        android:layout_below="@+id/checkBox1"
         android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
         android:background="@drawable/circle_button"
@@ -71,6 +71,19 @@
         android:layout_marginTop="17dp"
         android:buttonTint="@android:color/black"
         android:text="Remember Username"
+        android:textColorLink="@android:color/black"
+        android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/checkBox"
+        android:layout_marginTop="17dp"
+        android:buttonTint="@android:color/black"
+        android:text="Show Password"
         android:textColorLink="@android:color/black"
         android:textSize="16sp" />
 </RelativeLayout>
