--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/asa"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,8 +18,6 @@
         android:layout_marginTop="120dp"
         android:gravity="center"
         android:text="Username"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="normal" />
 
@@ -27,7 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_text"
-        android:backgroundTint="@android:color/black"
         android:textColor="@android:color/black" />
 
     <TextView
@@ -37,8 +35,6 @@
         android:layout_below="@+id/user_data"
         android:gravity="center"
         android:text="Password"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="normal" />
 
@@ -47,9 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pass_text"
-        android:backgroundTint="@android:color/black"
-        android:inputType="textPassword"
-        android:textColor="@android:color/black" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/login_btn"
@@ -69,9 +63,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/pass_data"
         android:layout_marginTop="17dp"
-        android:buttonTint="@android:color/black"
         android:text="Remember Username"
-        android:textColorLink="@android:color/black"
         android:textSize="16sp" />
 
     <CheckBox
@@ -82,8 +74,6 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/checkBox"
         android:layout_marginTop="17dp"
-        android:buttonTint="@android:color/black"
         android:text="Show Password"
-        android:textColorLink="@android:color/black"
         android:textSize="16sp" />
 </RelativeLayout>
