--- a/app/src/main/res/layout/settings_item_format.xml
+++ b/app/src/main/res/layout/settings_item_format.xml
@@ -75,9 +75,18 @@
             android:id="@+id/radioButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@+id/deletebutton" />
+
+        <ImageButton
+            android:id="@+id/deletebutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-
-            />
+            android:layout_centerVertical="true"
+            android:background="@android:color/white"
+            android:src="@drawable/ic_delete_black_24dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
