--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -49,10 +49,11 @@
         android:id="@+id/login_btn"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/checkBox1"
+        android:layout_below="@+id/checkBox"
         android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
         android:background="@drawable/circle_button"
+        android:elevation="4dp"
         android:text="Login" />
 
     <CheckBox
@@ -66,14 +67,14 @@
         android:text="Remember Username"
         android:textSize="16sp" />
 
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/checkBox"
-        android:layout_marginTop="17dp"
-        android:text="Show Password"
-        android:textSize="16sp" />
+    <!--<CheckBox-->
+    <!--android:id="@+id/checkBox1"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_below="@+id/checkBox"-->
+    <!--android:layout_marginTop="17dp"-->
+    <!--android:text="Show Password"-->
+    <!--android:textSize="16sp" />-->
 </RelativeLayout>
