--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -5,6 +5,7 @@
     android:id="@+id/content_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#c29e7f"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="net.deepeshmakhijani.bpgclogin.Settings"
     tools:showIn="@layout/activity_settings">
