--- a/app/src/main/res/layout/settings_item_format.xml
+++ b/app/src/main/res/layout/settings_item_format.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="2dp"
+    android:layout_margin="4dp"
     android:background="?attr/selectableItemBackground"
     android:padding="2dp"
     app:cardCornerRadius="0dp">
@@ -12,6 +12,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#c5a488"
         android:padding="16dp">
 
         <TextView
@@ -86,7 +87,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@android:color/white"
+            android:background="#00000000"
             android:src="@drawable/ic_delete_black_24dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
