--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -47,14 +47,26 @@
 
     <Button
         android:id="@+id/login_btn"
-        android:layout_width="130dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/checkBox"
         android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/circle_button"
         android:elevation="4dp"
-        android:text="Login" />
+        android:text="Login"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/logout_btn"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_btn"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="5dp"
+        android:background="#00000000"
+        android:elevation="4dp"
+        android:text="Logout" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -63,7 +75,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/pass_data"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="5dp"
         android:text="Remember Username"
         android:textSize="16sp" />
 
