--- a/app/src/main/res/layout/content_settings_main.xml
+++ b/app/src/main/res/layout/content_settings_main.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#725845"
-    android:orientation="vertical">
+    android:background="#c29e7f"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="net.deepeshmakhijani.bpgclogin.SettingsMain"
+    tools:showIn="@layout/activity_settings_main">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,7 +24,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#fff"
+            android:background="#c5a488"
             android:padding="16dp">
 
             <ImageView
@@ -56,8 +61,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#fff"
-
+            android:background="#c5a488"
             android:padding="16dp">
 
             <ImageView
@@ -87,7 +91,7 @@
 
         android:layout_centerHorizontal="true"
         android:text="Developed By:"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/d1"
@@ -95,8 +99,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/d2"
         android:layout_centerHorizontal="true"
-        android:text="Deepesh Makhijani : 9403813210"
-        android:textColor="@android:color/white" />
+        android:text="Shubham Kumar : 9867140807"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:id="@+id/d2"
@@ -105,7 +109,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="6dp"
-        android:text="Shubham Kumar : 9867140807"
-        android:textColor="@android:color/white" />
+        android:text="Deepesh Makhijani : 9403813210"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
