--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,92 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/asa"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.deepeshmakhijani.bpgclogin.MainActivity">
+    tools:context="net.deepeshmakhijani.bpgclogin.MainActivity"
+    android:fitsSystemWindows="true">
 
-    <TextView
-        android:id="@+id/user_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:gravity="center"
-        android:text="Username"
-        android:textSize="20sp"
-        android:textStyle="normal" />
-
-    <EditText
-        android:id="@+id/user_data"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/user_text"
-        android:textColor="@android:color/black" />
+        android:paddingTop="56dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp">
 
-    <TextView
-        android:id="@+id/pass_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_data"
-        android:gravity="center"
-        android:text="Password"
-        android:textSize="20sp"
-        android:textStyle="normal" />
+        <ImageView android:src="@drawable/logo_bits"
+            android:layout_width="wrap_content"
+            android:layout_height="72dp"
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="center_horizontal" />
 
-    <EditText
-        android:id="@+id/pass_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/pass_text"
-        android:inputType="textPassword" />
+        <!-- username  -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/user_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="Username" />
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/checkBox"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="18dp"
-        android:background="@drawable/circle_button"
-        android:elevation="4dp"
-        android:text="Login"
-        android:textSize="18sp" />
+        <!-- Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/pass_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="Password"/>
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:id="@+id/logout_btn"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/login_btn"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="5dp"
-        android:background="#00000000"
-        android:elevation="4dp"
-        android:text="Logout" />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/login_btn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:padding="12dp"
+            android:text="Login"/>
 
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/pass_data"
-        android:layout_marginTop="5dp"
-        android:text="Remember Username"
-        android:textSize="16sp" />
+        <Button
+            android:id="@+id/logout_btn"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/login_btn"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
+            android:background="#00000000"
+            android:elevation="4dp"
+            android:text="Logout" />
 
-    <!--<CheckBox-->
-    <!--android:id="@+id/checkBox1"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_alignParentLeft="true"-->
-    <!--android:layout_alignParentStart="true"-->
-    <!--android:layout_below="@+id/checkBox"-->
-    <!--android:layout_marginTop="17dp"-->
-    <!--android:text="Show Password"-->
-    <!--android:textSize="16sp" />-->
-</RelativeLayout>
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/pass_data"
+            android:layout_marginTop="5dp"
+            android:text="Remember Username"
+            android:textSize="16sp"/>
+
+        <!--<CheckBox-->
+        <!--android:id="@+id/checkBox1"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_below="@+id/checkBox"-->
+        <!--android:layout_marginTop="17dp"-->
+        <!--android:text="Show Password"-->
+        <!--android:textSize="16sp" />-->
+
+    </LinearLayout>
+</ScrollView>
