changed login page layout a bit and added a few animations

--- a/app/src/main/res/layout/content_settings_main.xml
+++ b/app/src/main/res/layout/content_settings_main.xml
@@ -119,7 +119,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="6dp"
-        android:text="Abhineet Nigam : "
+        android:text="Abhineet Nigam : 7744944182"
         android:textColor="@android:color/black" />
 
 
