--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,13 +14,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
-
-        <ImageView android:src="@drawable/logo_bits"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+        android:paddingRight="24dp"
+        android:weightSum="1">
 
         <!-- username  -->
         <android.support.design.widget.TextInputLayout
@@ -48,27 +43,6 @@
                 android:hint="Password"/>
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/login_btn"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:text="Login"/>
-
-        <Button
-            android:id="@+id/logout_btn"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/login_btn"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:background="#00000000"
-            android:elevation="4dp"
-            android:text="Logout" />
-
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
@@ -79,6 +53,34 @@
             android:layout_marginTop="5dp"
             android:text="Remember Username"
             android:textSize="16sp"/>
+
+
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/checkBox"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="18dp"
+            android:layout_gravity="center"
+            android:background="@drawable/circle_button"
+            android:elevation="4dp"
+            android:text="Login"
+            android:textSize="18sp" />
+
+
+
+        <Button
+            android:id="@+id/logout_btn"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/login_btn"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
+            android:background="#00000000"
+            android:elevation="4dp"
+            android:text="Logout" />
 
         <!--<CheckBox-->
         <!--android:id="@+id/checkBox1"-->
