--- a/app/src/main/res/layout/content_settings_main.xml
+++ b/app/src/main/res/layout/content_settings_main.xml
@@ -18,6 +18,9 @@
         android:layout_gravity="center"
         android:layout_margin="1dp"
         android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="2dp"
         app:cardCornerRadius="0dp">
 
@@ -40,7 +43,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/del"
                 android:paddingLeft="16dp"
-                android:text="Delete Credentials"
+                android:text="@string/delete_credentials"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
         </RelativeLayout>
@@ -55,6 +58,9 @@
         android:layout_gravity="center"
         android:layout_margin="1dp"
         android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:padding="2dp"
         app:cardCornerRadius="0dp">
 
@@ -75,8 +81,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/vpn"
                 android:layout_toRightOf="@+id/vpn"
                 android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:text="Change Password"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
