--- a/app/src/main/res/layout/settings_item_format.xml
+++ b/app/src/main/res/layout/settings_item_format.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -6,8 +7,11 @@
     android:layout_gravity="center"
     android:layout_margin="1dp"
     android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:padding="2dp"
     app:cardCornerRadius="0dp">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
