--- a/app/src/main/res/drawable/logout_btn.xml
+++ b/app/src/main/res/drawable/logout_btn.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <stroke android:width="5dip" android:color="#000" />
-    <solid android:color="#00000000" />
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#000" />
 </selector>
