--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#725845</item>
-        <item name="colorPrimaryDark">#725845</item>
-        <item name="colorAccent">#3A3B19</item>
+        <item name="colorPrimary">#4f3928</item>
+        <item name="colorPrimaryDark">#4f3928</item>
+        <item name="colorAccent">#22460f</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
