--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#4f3928</item>
         <item name="colorPrimaryDark">#4f3928</item>
-        <item name="colorAccent">#22460f</item>
+        <item name="colorAccent">#3b2d1c</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
