--- a/app/src/main/res/layout/content_settings_main.xml
+++ b/app/src/main/res/layout/content_settings_main.xml
@@ -14,8 +14,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card1"
         android:layout_width="match_parent"
-        android:layout_below="@+id/card3"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/card3"
         android:layout_gravity="center"
         android:layout_margin="1dp"
         android:background="?attr/selectableItemBackground"
@@ -128,6 +128,47 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:text="Set Default Credentials"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/card2"
+        android:layout_gravity="center"
+        android:layout_margin="1dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:padding="2dp"
+        app:cardCornerRadius="0dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/lt_brown"
+            android:padding="16dp">
+
+            <CheckBox
+                android:id="@+id/check_auto_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/check_auto_login"
+                android:layout_toRightOf="@+id/check_auto_login"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="Enable Auto Login"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
         </RelativeLayout>
