--- a/app/src/main/res/layout/login_widget.xml
+++ b/app/src/main/res/layout/login_widget.xml
@@ -11,6 +11,7 @@
         android:layout_height="50dp"
         android:layout_weight="1"
         android:background="@drawable/widget_circle"
+        android:textColor="@android:color/white"
         android:text="LOGIN"/>
 
 </LinearLayout>
