--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,19 +5,10 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9f7a51"
+    android:background="@drawable/background"
     android:focusable="true"
     android:focusableInTouchMode="true"
     tools:context="net.deepeshmakhijani.bpgclogin.MainActivity">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="fitEnd"
-        android:src="@drawable/background" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/user_text"
