--- a/app/src/main/res/layout/set_default_item_format.xml
+++ b/app/src/main/res/layout/set_default_item_format.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="1dp"
-    android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:padding="2dp"
@@ -16,7 +15,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lt_brown"
+        android:background="@color/colorBackground"
         android:padding="12dp">
 
         <TextView
@@ -24,8 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
+            android:textColor="@color/colorText"
             android:text="username"
-            android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -34,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/username_textview_new"
             android:padding="4dp"
+            android:textColor="@color/colorText"
             android:text=":"
             android:textSize="16sp" />
 
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/colon1_new"
             android:fontFamily="monospace"
+            android:textColor="@color/colorText"
             android:padding="4dp"
             android:textSize="16sp" />
 
@@ -52,8 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/username_textview_new"
             android:padding="4dp"
+            android:textColor="@color/colorText"
             android:text="password"
-            android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -63,6 +64,7 @@
             android:layout_below="@id/username_textview_new"
             android:layout_toRightOf="@+id/password_textview_new"
             android:padding="4dp"
+            android:textColor="@color/colorText"
             android:text=":"
             android:textSize="16sp" />
 
@@ -73,6 +75,7 @@
             android:layout_below="@+id/username_textview_new"
             android:layout_toRightOf="@+id/colon2_new"
             android:fontFamily="monospace"
+            android:textColor="@color/colorText"
             android:padding="4dp"
             android:textSize="16sp" />
 
@@ -82,6 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:textColor="@color/colorText"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp" />
 
