--- a/app/src/main/res/layout/content_set_default.xml
+++ b/app/src/main/res/layout/content_set_default.xml
@@ -5,7 +5,7 @@
     android:id="@+id/content_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9f7a51"
+    android:background="@color/colorPrimaryDark"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="net.deepeshmakhijani.bpgclogin.Settings"
     tools:showIn="@layout/activity_set_default">
