--- a/app/src/main/res/layout/content_settings_main.xml
+++ b/app/src/main/res/layout/content_settings_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9f7a51"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="net.deepeshmakhijani.bpgclogin.SettingsMain"
@@ -18,24 +18,23 @@
         android:layout_below="@+id/card3"
         android:layout_gravity="center"
         android:layout_margin="1dp"
-        android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:padding="2dp"
         app:cardCornerRadius="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/lt_brown"
+            android:background="@color/colorBackground"
             android:padding="16dp">
 
             <ImageView
                 android:id="@+id/del"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_centerVertical="true"
+
                 android:src="@drawable/ic_delete_black_24dp" />
 
             <TextView
@@ -45,7 +44,7 @@
                 android:layout_toRightOf="@+id/del"
                 android:paddingLeft="16dp"
                 android:text="@string/delete_credentials"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorText"
                 android:textSize="20sp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -58,23 +57,21 @@
         android:layout_below="@+id/card1"
         android:layout_gravity="center"
         android:layout_margin="1dp"
-        android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:padding="2dp"
         app:cardCornerRadius="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/lt_brown"
+            android:background="@color/colorBackground"
             android:padding="16dp">
 
             <ImageView
                 android:id="@+id/vpn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_vpn_key_black_24dp" />
 
@@ -85,9 +82,9 @@
                 android:layout_toEndOf="@+id/vpn"
                 android:layout_toRightOf="@+id/vpn"
                 android:paddingLeft="16dp"
+                android:textColor="@color/colorText"
                 android:paddingRight="16dp"
                 android:text="Change Password"
-                android:textColor="@android:color/black"
                 android:textSize="20sp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -99,23 +96,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="1dp"
-        android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:padding="2dp"
         app:cardCornerRadius="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/lt_brown"
+            android:background="@color/colorBackground"
             android:padding="16dp">
 
             <ImageView
                 android:id="@+id/updt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_update_black_24dp" />
 
@@ -126,9 +121,9 @@
                 android:layout_toEndOf="@+id/updt"
                 android:layout_toRightOf="@+id/updt"
                 android:paddingLeft="16dp"
+                android:textColor="@color/colorText"
                 android:paddingRight="16dp"
                 android:text="Set Default Credentials"
-                android:textColor="@android:color/black"
                 android:textSize="20sp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -141,17 +136,15 @@
         android:layout_below="@+id/card2"
         android:layout_gravity="center"
         android:layout_margin="1dp"
-        android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         android:padding="2dp"
         app:cardCornerRadius="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/lt_brown"
+            android:background="@color/colorBackground"
             android:padding="16dp">
 
             <CheckBox
@@ -168,8 +161,8 @@
                 android:layout_toRightOf="@+id/check_auto_login"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
+                android:textColor="@color/colorText"
                 android:text="Enable Auto Login"
-                android:textColor="@android:color/black"
                 android:textSize="20sp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -179,42 +172,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/d1"
-
+        android:textColor="@color/colorText"
         android:layout_centerHorizontal="true"
-        android:text="Developed By:"
-        android:textColor="@android:color/black" />
+        android:text="Developed By:" />
 
     <TextView
         android:id="@+id/d1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/d2"
+        android:textColor="@color/colorText"
         android:layout_centerHorizontal="true"
-        android:text="Shubham Kumar"
-        android:textColor="@android:color/black" />
+        android:text="Deepesh Makhijani" />
 
     <TextView
         android:id="@+id/d2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Deepesh Makhijani"
-        android:layout_above="@+id/text_empty_message1"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/colorText"
+        android:text="Shubham Kumar"
+        android:layout_above="@+id/text_empty_message1"/>
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/text_empty_message1"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/black"
         android:layout_above="@+id/text_empty_message"
+        android:textColor="@color/colorText"
         android:text="MOBILE APPLICATIONS CLUB"/>
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/text_empty_message"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:textColor="@android:color/black"
+        android:textColor="@color/colorText"
         android:layout_alignParentBottom="true"
         android:text="View Source Code"/>
 
