--- a/app/src/main/res/layout/settings_item_format.xml
+++ b/app/src/main/res/layout/settings_item_format.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:background="@color/colorPrimaryDark"
     android:layout_margin="1dp"
-    android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:padding="2dp"
@@ -16,7 +16,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/lt_brown"
+        android:background="@color/colorBackground"
         android:padding="12dp">
 
         <TextView
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:text="username"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorText"
             android:textSize="16sp" />
 
         <TextView
@@ -35,6 +35,7 @@
             android:layout_toRightOf="@+id/username_textview"
             android:padding="4dp"
             android:text=":"
+            android:textColor="@color/colorText"
             android:textSize="16sp" />
 
         <TextView
@@ -43,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/colon1"
             android:fontFamily="monospace"
+            android:textColor="@color/colorText"
             android:padding="4dp"
             android:textSize="16sp" />
 
@@ -52,8 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/username_textview"
             android:padding="4dp"
+            android:textColor="@color/colorText"
             android:text="password"
-            android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -64,6 +66,7 @@
             android:layout_toRightOf="@+id/password_textview"
             android:padding="4dp"
             android:text=":"
+            android:textColor="@color/colorText"
             android:textSize="16sp" />
 
         <TextView
@@ -73,6 +76,7 @@
             android:layout_below="@+id/username_textview"
             android:layout_toRightOf="@+id/colon2"
             android:fontFamily="monospace"
+            android:textColor="@color/colorText"
             android:padding="4dp"
             android:textSize="16sp" />
 
@@ -83,7 +87,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="#00000000"
+            android:background="@android:color/transparent"
             android:src="@drawable/ic_delete_black_24dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
