--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4f3928</color>
-    <color name="colorPrimaryDark">#4f3928</color>
-    <color name="colorAccent">#3b2d1c</color>
-    <color name="lt_brown">#9f7a51</color>
+    <color name="colorPrimary">#222326</color>
+    <color name="colorBackground">#121314</color>
+    <color name="colorPrimaryDark">#0b0b0c</color>
+    <color name="colorAccent">#1DD35E</color>
+    <color name="colorText">#fff</color>
+    <color name="colorText2">#a0a0a0</color>
 </resources>
