--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,18 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#4f3928</item>
-        <item name="colorPrimaryDark">#4f3928</item>
-        <item name="colorAccent">#3b2d1c</item>
+        <item name="colorPrimary">#222326</item>
+        <item name="colorPrimaryDark">#0b0b0b</item>
+        <item name="colorAccent">#1DD35E</item>
+        <item name="android:colorBackground">#121314</item>
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="android:textColorSecondary">#a0a0a0</item>
+        <item name="android:statusBarColor">#0b0b0b</item>
+        <item name="android:windowBackground">@color/colorBackground</item>
+        <item name="android:textColorPrimaryInverse">@color/colorPrimary</item>
+        <item name="android:textColorSecondaryInverse">@color/colorPrimaryDark</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:colorForeground">@color/colorText</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +25,12 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="TextLabel" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/colorText</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 
 </resources>
